# src/controllers/languages.ts
@@ -10,7 +10,7 @@ import { CACHE_ONE_DAY } from '../constants/cache';
  *
  *  /languages:
  *    get:
- *      operationId: findAll
+ *      operationId: getAllLanguages
  *      tags:
  *        - languages
  *      summary: Get all languages
@@ -28,7 +28,7 @@ import { CACHE_ONE_DAY } from '../constants/cache';
  *        '200':
  *          $ref: '#/components/responses/LanguagesResponse'
  */
-export const findAll = async (req: Request, res: Response) => {
+export const getAll = async (req: Request, res: Response) => {
   const languageRepository = getRepository(Language);
   const { isActive }: {isActive: string } = req.query;
 
@@ -52,32 +52,3 @@ export const findAll = async (req: Request, res: Response) => {
   return res.json(languages);
 };
 
-/**
- * Gets all the active languages including their active voices
- *
- */
-export const findAllActive = async (req: Request, res: Response) => {
-  const languageRepository = getRepository(Language);
-
-  const activeLanguages = await languageRepository.find({
-    relations: ['voices'],
-    where: {
-      isActive: true
-    },
-    cache: {
-      id: `${Language.name}:active`,
-      milliseconds: CACHE_ONE_DAY
-    }
-  });
-
-  // const activeLanguages = await languageRepository
-  //   .createQueryBuilder('language')
-  //   .leftJoinAndSelect('language.voices', 'voice')
-  //   .leftJoin('voice.language', 'user_voice_setting')
-  //     .where('language.isActive = :isActive', { isActive: true })
-  //       .andWhere('voice.isActive = :isActive', { isActive: true })
-  //   // .cache('languages_active', CACHE_ONE_DAY)
-  //   .getMany();
-
-  return res.json(activeLanguages);
-};
