# src/controllers/user/types.ts
@@ -1,5 +1,14 @@
-export interface UpdateUserRequesBody {
+import { Response } from 'express';
+import { User } from '../../database/entities/user';
+
+export interface PatchOneUserRequestBody {
   email?: string;
   newPassword?: string;
   currentPassword?: string;
+}
+
+export interface UserResponse extends Response {
+  locals: {
+    user: User
+  }
 }
